--- a/card.html
+++ b/card.html
@@ -14,7 +14,8 @@
 			<hr>
  			<h2>prasanthi</h2>
 			<p>student</p>
-			<p>prashu@gmail.com</p>
+			<p>prasanthi.kotagiri
+			29@gmail.com</p>
 			<a href="resume.html"><h3>view profile</h3></a>
 		</div>
 
@@ -23,7 +24,8 @@
             <hr>
  			<h2>charan</h2>
 			<p>student</p>
-			<p>charan@gmail.com</p>
+			<p>charan.koatagiri
+			28@gmail.com</p>
 			<a href="2resume.html"><h3>view profile</h3></a>
 		</div>
 
@@ -32,7 +34,8 @@
             <hr>
  			<h2>srija</h2>
 			<p>student</p>
-			<p>srija@gmail.com</p>
+			<p>srija.kotagiri
+			6629@gmail.com</p>
 			<a href="3resume.html"><h3>view profile</h3></a>
 		</div>
 	</section>
