--- a/2resume.html
+++ b/2resume.html
@@ -18,7 +18,7 @@
 			</div>
 			<div class="id-2">
 				<p>576788990909</p>
-				<p>charan@gmail.com</p>
+				<p>charan.koagiri28@gmail.com</p>
 				<p>mylavaram</p>
 			</div>
 
